; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_iova.c_iova_domain_flush.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_iova.c_iova_domain_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iova_domain = type { i32, i32 (%struct.iova_domain*)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iova_domain*)* @iova_domain_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iova_domain_flush(%struct.iova_domain* %0) #0 {
  %2 = alloca %struct.iova_domain*, align 8
  store %struct.iova_domain* %0, %struct.iova_domain** %2, align 8
  %3 = load %struct.iova_domain*, %struct.iova_domain** %2, align 8
  %4 = getelementptr inbounds %struct.iova_domain, %struct.iova_domain* %3, i32 0, i32 2
  %5 = call i32 @atomic64_inc(i32* %4)
  %6 = load %struct.iova_domain*, %struct.iova_domain** %2, align 8
  %7 = getelementptr inbounds %struct.iova_domain, %struct.iova_domain* %6, i32 0, i32 1
  %8 = load i32 (%struct.iova_domain*)*, i32 (%struct.iova_domain*)** %7, align 8
  %9 = load %struct.iova_domain*, %struct.iova_domain** %2, align 8
  %10 = call i32 %8(%struct.iova_domain* %9)
  %11 = load %struct.iova_domain*, %struct.iova_domain** %2, align 8
  %12 = getelementptr inbounds %struct.iova_domain, %struct.iova_domain* %11, i32 0, i32 0
  %13 = call i32 @atomic64_inc(i32* %12)
  ret void
}

declare dso_local i32 @atomic64_inc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
